; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/arch/x86/util/extr_group.c_arch_topdown_check_group.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/arch/x86/util/extr_group.c_arch_topdown_check_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"kernel/nmi_watchdog\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arch_topdown_check_group(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = call i64 @sysctl__read_int(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32* %4)
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %4, align 4
  %10 = icmp sgt i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %8
  %12 = load i32*, i32** %3, align 8
  store i32 1, i32* %12, align 4
  store i32 0, i32* %2, align 4
  br label %14

13:                                               ; preds = %8
  store i32 1, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %11, %7
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i64 @sysctl__read_int(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
